--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
 <p>Recommended 1252 x 626</p>
 
 <p><a href="https://support.twitter.com/groups/50-welcome-to-twitter/topics/204-the-basics/articles/127871-editing-your-profile">Source</a></p>
+
+<h2><a name="iOS" class="anchor" href="#ios"><span class="octicon octicon-link"></span></a>iOS</h2>
+<p>
+
+<pre class="prettyprint prettyprinted" style=""><code class="language-html"><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-iphone.png"</span><span class="tag">&gt;</span><span class="pln">
+</span><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">sizes</span><span class="pun">=</span><span class="atv">"76x76"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-ipad.png"</span><span class="tag">&gt;</span><span class="pln">
+</span><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">sizes</span><span class="pun">=</span><span class="atv">"120x120"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-iphone-retina.png"</span><span class="tag">&gt;</span><span class="pln">
+</span><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">sizes</span><span class="pun">=</span><span class="atv">"152x152"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-ipad-retina.png"</span><span class="tag">&gt;</span></code></pre>
+
+</p>
+<h3>iOS 7</h3>
+<h4>iPhone</h4>
+<p>120x120 - Retina</p>
+<p>60x60 - Standard</p>
+<h4>iPad</h4>
+<p>152x152 - Retina</p>
+<p>76x76 - Standard</p>
+
+
       </section>
     </div>
 
