--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <p><a href="https://support.twitter.com/groups/50-welcome-to-twitter/topics/204-the-basics/articles/127871-editing-your-profile">Source</a></p>
 
 <h2><a name="iOS" class="anchor" href="#ios"><span class="octicon octicon-link"></span></a>iOS</h2>
+<p>List each size on separate line.</p>
 <p>
 
 <pre class="prettyprint prettyprinted" style=""><code class="language-html"><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-iphone.png"</span><span class="tag">&gt;</span><span class="pln">
