--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 <p>152x152 - Retina</p>
 <p>76x76 - Standard</p>
 
-
+<h3>Resources</h3>
+<p>[Iconogen](http://iconogen.com/) - Converts .png file into Apple Touch, favicon, and Windows Tile icons</p>
       </section>
     </div>
 
