--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <p>76x76 - Standard</p>
 
 <h3>Resources</h3>
-<p>[Iconogen](http://iconogen.com/) - Converts .png file into Apple Touch, favicon, and Windows Tile icons</p>
+<p><a href="http://iconogen.com/">Iconogen</a> - Converts .png file into Apple Touch, favicon, and Windows Tile icons</p>
       </section>
     </div>
 
