--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
 <h3>
 <a name="profile-photo-1" class="anchor" href="#profile-photo-1"><span class="octicon octicon-link"></span></a>Profile Photo</h3>
-
+<p>48x48 - Normal</p>
+<p><a href="https://dev.twitter.com/docs/user-profile-images-and-banners">Source</a></p>
 <h3>
 <a name="header-photo" class="anchor" href="#header-photo"><span class="octicon octicon-link"></span></a>Header Photo</h3>
 
@@ -71,6 +72,7 @@
 </span><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">sizes</span><span class="pun">=</span><span class="atv">"152x152"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-ipad-retina.png"</span><span class="tag">&gt;</span></code></pre>
 
 </p>
+<p><a href="https://developer.apple.com/library/ios/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html">Source</a>
 <h3>iOS 7</h3>
 <h4>iPhone</h4>
 <p>120x120 - Retina</p>
@@ -78,7 +80,7 @@
 <h4>iPad</h4>
 <p>152x152 - Retina</p>
 <p>76x76 - Standard</p>
-
+<p><a href="https://developer.apple.com/LIBRARY/IOS/qa/qa1686/_index.html">Source</a></p>
 <h3>Resources</h3>
 <p><a href="http://iconogen.com/">Iconogen</a> - Converts .png file into Apple Touch, favicon, and Windows Tile icons</p>
       </section>
