--- a/index.html
+++ b/index.html
@@ -80,9 +80,35 @@
 <h4>iPad</h4>
 <p>152x152 - Retina</p>
 <p>76x76 - Standard</p>
+<h3>iOS 6 (and below)</h3>
+<h4>iPhone</h4>
+<p>114x114 - Retina</p>
+<p>57x57 - Standard</p>
+<h4>iPad</h4>
+<p>72x72 - Standard</p>
+<p>144x144 - Retina</p>
 <p><a href="https://developer.apple.com/LIBRARY/IOS/qa/qa1686/_index.html">Source</a></p>
-<h3>Resources</h3>
+<h2>Android</h2>
+<p>Standard size: 48x48<p>
+<p>Other sizes based on pixel dimensions:</p>
+<ul>
+  <li>72x72 (1.5x)</li>
+  <li>96x96 (2x)</li>
+  <li>144x144 (3x)</li>
+  <li>192x192 (4x)</li>
+</ul>
+<p><a href="http://developer.android.com/design/style/iconography.html">Source</a></p>
+<h2>Windows</h2>
+<table>
+  <tr><th>Tile Size</th><th>Standard size</th><th>Minimum size</th><th>Recommended size</th></tr>
+  <tr><td>Medium</td><td>150x150</td><td>120x120</td><td>270x270</td></tr>
+  <tr><td>Small</td><td>70x70</td><td>56x56</td><td>128x128</td></tr>
+  <tr><td>Wide</td><td>310x150</td><td>248x120</td><td>558x270</td></tr>
+  <tr><td>Large</td><td>310x310</td><td>248x248</td><td>558x558</td></tr>
+</table>
+<h2>Resources</h2>
 <p><a href="http://iconogen.com/">Iconogen</a> - Converts .png file into Apple Touch, favicon, and Windows Tile icons</p>
+
       </section>
     </div>
 
