--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
   <tr><td>Wide</td><td>310x150</td><td>248x120</td><td>558x270</td></tr>
   <tr><td>Large</td><td>310x310</td><td>248x248</td><td>558x558</td></tr>
 </table>
+<p><a href="http://msdn.microsoft.com/en-us/library/ie/dn455106(v=vs.85).aspx">Source</a></p>
 <h2>Resources</h2>
 <p><a href="http://iconogen.com/">Iconogen</a> - Converts .png file into Apple Touch, favicon, and Windows Tile icons</p>
 
