updated tag line

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Graphic Sizes : Because remembering all those graphic sizes is hard" />
+    <meta name="description" content="Graphic Sizes : Because remembering all those web graphic sizes is hard" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/higley/GraphicSizes">View on GitHub</a>
 
           <h1 id="project_title">Graphic Sizes</h1>
-          <h2 id="project_tagline">Because remembering all those graphic sizes is hard</h2>
+          <h2 id="project_tagline">Because remembering all those web graphic sizes is hard</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/higley/GraphicSizes/zipball/master">Download this project as a .zip file</a>
@@ -37,14 +37,14 @@
 <h3>
 <a name="profile-photo" class="anchor" href="#profile-photo"><span class="octicon octicon-link"></span></a>Profile Photo</h3>
 
-<p>150px x 150px (scales down to 130px x 130px, though)</p>
+<p>150px x 150px (scales down to 130 x 130, though)</p>
 
 <p><a href="https://www.facebook.com/help/315809258465467">Source</a></p>
 
 <h3>
 <a name="cover-photo" class="anchor" href="#cover-photo"><span class="octicon octicon-link"></span></a>Cover Photo</h3>
 
-<p>815px x 315px</p>
+<p>815 x 315</p>
 
 <p><a href="https://www.facebook.com/help/125379114252045">Source</a></p>
 
@@ -85,8 +85,8 @@
 <p>114x114 - Retina</p>
 <p>57x57 - Standard</p>
 <h4>iPad</h4>
-<p>72x72 - Standard</p>
 <p>144x144 - Retina</p>
+<p>72x72 - Standard</p>
 <p><a href="https://developer.apple.com/LIBRARY/IOS/qa/qa1686/_index.html">Source</a></p>
 <h2>Android</h2>
 <p>Standard size: 48x48<p>
@@ -101,8 +101,8 @@
 <h2>Windows</h2>
 <table>
   <tr><th>Tile Size</th><th>Standard size</th><th>Minimum size</th><th>Recommended size</th></tr>
-  <tr><td>Medium</td><td>150x150</td><td>120x120</td><td>270x270</td></tr>
   <tr><td>Small</td><td>70x70</td><td>56x56</td><td>128x128</td></tr>
+  <tr><td>Medium</td><td>150x150</td><td>120x120</td><td>270x270</td></tr>
   <tr><td>Wide</td><td>310x150</td><td>248x120</td><td>558x270</td></tr>
   <tr><td>Large</td><td>310x310</td><td>248x248</td><td>558x558</td></tr>
 </table>
