--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <h1 id="project_title">Graphic Sizes</h1>
           <h2 id="project_tagline">Because remembering all those web graphic sizes is hard</h2>
 
-            <section id="downloads">
+            <!--<section id="downloads">
               <a class="zip_download_link" href="https://github.com/higley/GraphicSizes/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/higley/GraphicSizes/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+            </section>-->
         </header>
     </div>
 
