--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
+      <p>A resource for tracking the various image sizes needed for common resources related to web development</p>
       <section id="main_content" class="inner">
         <h2>
 <a name="facebook" class="anchor" href="#facebook"><span class="octicon octicon-link"></span></a>Facebook</h2>
