--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-      <p>A resource for tracking the various image sizes needed for common resources related to web development</p>
+      <p>A resource for tracking the various image sizes needed for common resources related to web development. Feel free to contribute (via issues or pull request).</p>
         <h2>
 <a name="facebook" class="anchor" href="#facebook"><span class="octicon octicon-link"></span></a>Facebook</h2>
 
