--- a/index.html
+++ b/index.html
@@ -1,137 +1,6 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Graphic Sizes : Because remembering all those web graphic sizes is hard" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Graphic Sizes : Because remembering all those web graphic sizes is hard</title>
-  </head>
-
-  <body>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-48373533-1', 'graphicsizes.com');
-  ga('send', 'pageview');
-
-</script>
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/higley/GraphicSizes">View on GitHub</a>
-
-          <h1 id="project_title">Graphic Sizes</h1>
-          <h2 id="project_tagline">Because remembering all those web graphic sizes is hard</h2>
-
-            <!--<section id="downloads">
-              <a class="zip_download_link" href="https://github.com/higley/GraphicSizes/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/higley/GraphicSizes/tarball/master">Download this project as a tar.gz file</a>
-            </section>-->
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-      <p>A resource for tracking the various image sizes needed for common resources related to web development. Feel free to contribute (via issues or pull request).</p>
-        <h2>
-<a name="facebook" class="anchor" href="#facebook"><span class="octicon octicon-link"></span></a>Facebook</h2>
-
-<h3>
-<a name="profile-photo" class="anchor" href="#profile-photo"><span class="octicon octicon-link"></span></a>Profile Photo</h3>
-
-<p>150px x 150px (scales down to 130 x 130, though)</p>
-
-<p><a href="https://www.facebook.com/help/315809258465467">Source</a></p>
-
-<h3>
-<a name="cover-photo" class="anchor" href="#cover-photo"><span class="octicon octicon-link"></span></a>Cover Photo</h3>
-
-<p>815 x 315</p>
-
-<p><a href="https://www.facebook.com/help/125379114252045">Source</a></p>
-
-<h2>
-<a name="twitter" class="anchor" href="#twitter"><span class="octicon octicon-link"></span></a>Twitter</h2>
-
-<h3>
-<a name="profile-photo-1" class="anchor" href="#profile-photo-1"><span class="octicon octicon-link"></span></a>Profile Photo</h3>
-<p>48x48 - Normal</p>
-<p><a href="https://dev.twitter.com/docs/user-profile-images-and-banners">Source</a></p>
-<h3>
-<a name="header-photo" class="anchor" href="#header-photo"><span class="octicon octicon-link"></span></a>Header Photo</h3>
-
-<p>Recommended 1252 x 626</p>
-
-<p><a href="https://support.twitter.com/groups/50-welcome-to-twitter/topics/204-the-basics/articles/127871-editing-your-profile">Source</a></p>
-
-<h2><a name="iOS" class="anchor" href="#ios"><span class="octicon octicon-link"></span></a>iOS</h2>
-<p>List each size on separate line.</p>
-<p>
-
-<pre class="prettyprint prettyprinted" style=""><code class="language-html"><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-iphone.png"</span><span class="tag">&gt;</span><span class="pln">
-</span><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">sizes</span><span class="pun">=</span><span class="atv">"76x76"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-ipad.png"</span><span class="tag">&gt;</span><span class="pln">
-</span><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">sizes</span><span class="pun">=</span><span class="atv">"120x120"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-iphone-retina.png"</span><span class="tag">&gt;</span><span class="pln">
-</span><span class="tag">&lt;link</span><span class="pln"> </span><span class="atn">rel</span><span class="pun">=</span><span class="atv">"apple-touch-icon"</span><span class="pln"> </span><span class="atn">sizes</span><span class="pun">=</span><span class="atv">"152x152"</span><span class="pln"> </span><span class="atn">href</span><span class="pun">=</span><span class="atv">"touch-icon-ipad-retina.png"</span><span class="tag">&gt;</span></code></pre>
-
-</p>
-<p><a href="https://developer.apple.com/library/ios/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html">Source</a>
-<h3>iOS 7</h3>
-<h4>iPhone</h4>
-<p>120x120 - Retina</p>
-<p>60x60 - Standard</p>
-<h4>iPad</h4>
-<p>152x152 - Retina</p>
-<p>76x76 - Standard</p>
-<h3>iOS 6 (and below)</h3>
-<h4>iPhone</h4>
-<p>114x114 - Retina</p>
-<p>57x57 - Standard</p>
-<h4>iPad</h4>
-<p>144x144 - Retina</p>
-<p>72x72 - Standard</p>
-<p><a href="https://developer.apple.com/LIBRARY/IOS/qa/qa1686/_index.html">Source</a></p>
-<h2>Android</h2>
-<p>Standard size: 48x48<p>
-<p>Other sizes based on pixel dimensions:</p>
-<ul>
-  <li>72x72 (1.5x)</li>
-  <li>96x96 (2x)</li>
-  <li>144x144 (3x)</li>
-  <li>192x192 (4x)</li>
-</ul>
-<p><a href="http://developer.android.com/design/style/iconography.html">Source</a></p>
-<h2>Windows</h2>
-<table>
-  <tr><th>Tile Size</th><th>Standard size</th><th>Minimum size</th><th>Recommended size</th></tr>
-  <tr><td>Small</td><td>70x70</td><td>56x56</td><td>128x128</td></tr>
-  <tr><td>Medium</td><td>150x150</td><td>120x120</td><td>270x270</td></tr>
-  <tr><td>Wide</td><td>310x150</td><td>248x120</td><td>558x270</td></tr>
-  <tr><td>Large</td><td>310x310</td><td>248x248</td><td>558x558</td></tr>
-</table>
-<p><a href="http://msdn.microsoft.com/en-us/library/ie/dn455106(v=vs.85).aspx">Source</a></p>
-<h2>Resources</h2>
-<p><a href="http://iconogen.com/">Iconogen</a> - Converts .png file into Apple Touch, favicon, and Windows Tile icons</p>
-
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">GraphicSizes maintained by <a href="https://github.com/higley">higley</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
+{% capture index %}{% include index.md %}{% endcapture %}
+{{ index | markdownify }}
